--- a/mse/XRD_plotting.ipynb
+++ b/mse/XRD_plotting.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "To get the most out of this notebook, you should already have:    \n",
     "- Knowledge of XRD fundamentals such as Bragg's law and intensity factors.\n",
-    "- Intermediate scientific computing experience to understand the NumPy functions."
+    "- Knowledge of scientific computing fundamentals to understand the NumPy functions."
    ]
   },
   {
@@ -126,18 +126,24 @@
     "    Returns:\n",
     "        thetas (numpy.darray): A NumPy array of Bragg angles in radians.\n",
     "    \"\"\"\n",
+    "    \n",
     "    # ---------------------- #\n",
     "    # YOUR CODE HERE\n",
-    "\n",
-    "    pass\n",
-    "    # ---------------------- #"
+    "    \n",
+    "    thetas = None  # replace this\n",
+    "    \n",
+    "    # ---------------------- #\n",
+    "    \n",
+    "    return thetas"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are many good reasons to break up the calculation into individual functions, one of them being that we can easily combine them all at the end. Another reason is that we can write some simple tests to check our logic before proceeding further. Assuming you don't change my default values below for Ni lattice constant and Cu $K$-$\\alpha$, you should get approximately: `[0.220, 0.314, 0.388, 0.452]`"
+    "#### Test for `compute_thetas()`\n",
+    "\n",
+    "There are many good reasons to break up the calculation into individual functions, one of them being that we can easily combine them all at the end. Another reason is that we can write **some simple tests to check our logic before proceeding further**. This is very good practice! Assuming you don't change my default values below for Ni lattice constant and Cu $K$-$\\alpha$, you should get approximately: `[0.220, 0.314, 0.388, 0.452]` in radians."
    ]
   },
   {
@@ -146,6 +152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Run this cell to test the above function\n",
     "a = 0.3524  # Lattice constant of nickel in nm\n",
     "wavelength = 0.15406  # Cu K-alpha wavelength in nm\n",
     "planes = np.array([[1,0,0], [1,1,0], [1,1,1], [2,0,0]])\n",
@@ -192,11 +199,11 @@
     "$$ f(s) = Z - 41.78214 \\times s^2 \\times \\sum_{i=1}^{N} a_i \\exp \\left( -b_i s^2 \\right) $$\n",
     "where $a_i$ and $b_i$ for some common elements are given by:    \n",
     "\n",
-    "| Name | $Z$ | $a_1$ | $b_1$ | $a_2$ | $b_2$ | $a_3$ | $b_3$ | $a_4$ | $b_4$ |\n",
-    "| ---: | ---: | ---: | ---: | ---: | ---: | ---: | ---: | ---: | ---: |\n",
-    "| Si | 14 | 2.129 | 57.775 | 2.533 | 16.476 | 0.835 | 2.880 | 0.322 | 0.386 | \n",
-    "| Fe | 26 | 2.544 | 64.424 | 2.343 | 14.880 | 1.759 | 2.854 | 0.506 | 0.350 |\n",
-    "| Ni | 28 | 2.210 | 58.727 | 2.134 | 13.553 | 1.689 | 2.609 | 0.524 | 0.339 |\n",
+    "| Name | Structure | $Z$ | $a_1$ | $b_1$ | $a_2$ | $b_2$ | $a_3$ | $b_3$ | $a_4$ | $b_4$ |\n",
+    "| :---: | :---: | ---: | ---: | ---: | ---: | ---: | ---: | ---: | ---: | ---: |\n",
+    "| Si | DC | 14 | 2.129 | 57.775 | 2.533 | 16.476 | 0.835 | 2.880 | 0.322 | 0.386 | \n",
+    "| Fe | BCC | 26 | 2.544 | 64.424 | 2.343 | 14.880 | 1.759 | 2.854 | 0.506 | 0.350 |\n",
+    "| Ni | FCC | 28 | 2.210 | 58.727 | 2.134 | 13.553 | 1.689 | 2.609 | 0.524 | 0.339 |\n",
     "\n",
     "We'll make this one of the inputs to the function below and give the atomic scattering factor elsewhere.\n",
     "\n",
@@ -225,18 +232,24 @@
     "        F (numpy.darray): A NumPy array of the\n",
     "            structure factor for each angle (diffraction plane).\n",
     "    \"\"\"\n",
+    "    \n",
     "    # ---------------------- #\n",
     "    # YOUR CODE HERE\n",
     "\n",
-    "    pass\n",
-    "    # ---------------------- #"
+    "    F = None  # replace this\n",
+    "    \n",
+    "    # ---------------------- #\n",
+    "    \n",
+    "    return F"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Again, we'll write a little test for this rather complex function. It's good practice and a good sanity check. Assuming you use my default values for Ni, you should get approximately: `[0, 0, 82.1, 76.8]`"
+    "#### Test for `compute_F()`\n",
+    "\n",
+    "Again, we'll write a little test for this rather complex function. It's good practice and a good sanity check. Assuming you use my default values for Ni, you should get approximately: `[0, 0, 82.1, 76.8]` corresponding to [FCC selection rules](https://raw.githubusercontent.com/enze-chen/learning_modules/master/fig/XRD_selection_rules.png)."
    ]
   },
   {
@@ -245,6 +258,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Run this cell to test the above function\n",
     "s = np.sin(thetas) / (10*wavelength)\n",
     "S = 2.210 * np.exp(-58.727*s**2) + 2.134 * np.exp(-13.553*s**2) + \\\n",
     "    1.689 * np.exp(-2.609*s**2) + 0.524 * np.exp(-0.339*s**2)\n",
@@ -262,10 +276,10 @@
     "\n",
     "The multiplicity factor counts the number of planes belonging to one family. Since we're only working with cubic systems in this notebook, this is equivalent to counting the number of permutations and sign flips.\n",
     "\n",
-    "**TODO**: Complete the following function named `compute_m()`. Some hints are:\n",
+    "**TODO**: Complete the following function named `compute_m()`. There are many ways to accomplish this. Some hints for what I think is a logical way are:\n",
     "- Can you separate the computation for number of permutations and the number of different sign combinations?\n",
     "- You might find the `set()` function combined with [`itertools.permutations()`](https://www.geeksforgeeks.org/python-itertools-permutations/) useful.\n",
-    "- You might find the [`np.count_nonzero(x)`](https://numpy.org/doc/stable/reference/generated/numpy.count_nonzero.html) function helpful for computing sign flips.\n",
+    "- You might find the [`np.count_nonzero(x)`](https://numpy.org/doc/stable/reference/generated/numpy.count_nonzero.html) function helpful for computing the contribution from sign flips.\n",
     "- You can raise a scalar to an exponent that's a NumPy array with the `scalar**array` syntax."
    ]
   },
@@ -287,17 +301,23 @@
     "        m (numpy.darray): A NumPy array of the \n",
     "            multiplicity factor for each plane.\n",
     "    \"\"\"\n",
+    "    \n",
     "    # ---------------------- #\n",
     "    # YOUR CODE HERE\n",
     "\n",
-    "    pass\n",
-    "    # ---------------------- #"
+    "    m = None  # replace this\n",
+    "    \n",
+    "    # ---------------------- #\n",
+    "    \n",
+    "    return m"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Test for `compute_m()`\n",
+    "\n",
     "Another function, another test! Using the planes defined previously, you should get: `[6, 12, 8, 6]`."
    ]
   },
@@ -307,6 +327,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Run this cell to test the above function\n",
+    "planes = np.array([[1,0,0], [1,1,0], [1,1,1], [2,0,0]])\n",
     "m = compute_m(planes)\n",
     "print(f'Multiplicity factor: {m}')"
    ]
@@ -321,7 +343,7 @@
     "$$ L_p(\\theta) = \\frac{1 + \\cos^2 (2\\theta)}{\\sin^2 (\\theta) \\cos(\\theta)} $$\n",
     "\n",
     "**TODO**: Complete the following function named `compute_Lp()`. Some hints are:\n",
-    "- You can start with a for loop, but to compute $L_p$ efficiently at each angle, you can experiment with built-in NumPy functions such as `divide()`, `multiply()`, `sin()`, and `cos()`."
+    "- You can start with a `for` loop, but to compute $L_p$ efficiently at each angle, you can experiment with built-in NumPy functions such as [`np.divide()`](https://numpy.org/doc/stable/reference/generated/numpy.divide.html), [`np.multiply()`](https://numpy.org/doc/stable/reference/generated/numpy.multiply.html), [`np.sin()`](https://numpy.org/doc/stable/reference/generated/numpy.sin.html), and [`np.cos()`](https://numpy.org/doc/stable/reference/generated/numpy.cos.html)."
    ]
   },
   {
@@ -341,17 +363,23 @@
     "        Lp (numpy.darray): A NumPy array of the\n",
     "            Lorentz-polarization factor at each angle.\n",
     "    \"\"\"\n",
+    "    \n",
     "    # ---------------------- #\n",
     "    # YOUR CODE HERE\n",
     "\n",
-    "    pass\n",
-    "    # ---------------------- #"
+    "    Lp = None  # replace this\n",
+    "    \n",
+    "    # ---------------------- #\n",
+    "    \n",
+    "    return Lp"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Test for `compute_Lp()`\n",
+    "\n",
     "Final test! You should get approximately: `[38.99, 18.20, 11.37, 8.04]`."
    ]
   },
@@ -361,6 +389,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Run this cell to test the above function\n",
+    "planes = np.array([[1,0,0], [1,1,0], [1,1,1], [2,0,0]])\n",
+    "thetas = compute_thetas(planes, a, wavelength) \n",
     "Lp = compute_Lp(thetas)\n",
     "print(f'Lorentz-polarization factor: {Lp}')"
    ]
@@ -373,10 +404,12 @@
     "\n",
     "Almost done! First we'll define a few more planes in order to get a few more peaks. Then, we can call the functions we wrote above, whichever ones we were able to get successfully working, to compute the final intensity. \n",
     "\n",
-    "**TODO**: Compute the final set of angles and intensities based on your code above. Some hints:\n",
+    "**TODO**: Compute the final set of `angles` and `intensities` based on your code above. Some hints:\n",
     "- Don't forget to take the modulus squared of the structure factor!\n",
-    "- If you didn't get any of the intensity calculations to work, you can just set it to be [an array of ones](https://numpy.org/doc/stable/reference/generated/numpy.ones.html).\n",
-    "- You'll probably want to convert $\\theta$ (radians) into $2\\theta$ (degrees) to follow convention. [`np.degrees(x)`](https://numpy.org/doc/stable/reference/generated/numpy.degrees.html) is a nice function."
+    "- To multiply the various intensity terms element-by-element, use the [`np.multiply(x,y)`](https://numpy.org/doc/stable/reference/generated/numpy.multiply.html) method.\n",
+    "- If you didn't get any of the intensity calculations to work, you can just set the `intensities` variable to be [an array of ones](https://numpy.org/doc/stable/reference/generated/numpy.ones.html).\n",
+    "- You'll probably want to convert $\\theta$ (radians) into $2\\theta$ (degrees) to follow convention. [`np.degrees(x)`](https://numpy.org/doc/stable/reference/generated/numpy.degrees.html) is helpful.\n",
+    "- Here we use a [stem plot](https://matplotlib.org/3.2.1/gallery/lines_bars_and_markers/stem_plot.html#sphx-glr-gallery-lines-bars-and-markers-stem-plot-py) to clearly represent the peaks."
    ]
   },
   {
@@ -393,8 +426,10 @@
     "S = 2.210 * np.exp(-58.727*s**2) + 2.134 * np.exp(-13.553*s**2) + \\\n",
     "    1.689 * np.exp(-2.609*s**2) + 0.524 * np.exp(-0.339*s**2)\n",
     "f = 28 - 41.78214 * np.multiply(s**2, S)\n",
+    "\n",
     "# ---------------------- #\n",
     "# YOUR CODE HERE\n",
+    "\n",
     "\n",
     "# ---------------------- #\n",
     "\n",
@@ -417,25 +452,33 @@
     "\n",
     "## Possible extensions\n",
     "\n",
-    "There are so many ways you can improve this notebook. Here are a few ideas:\n",
-    "* Can you [annotate](https://matplotlib.org/3.2.1/api/_as_gen/matplotlib.axes.Axes.annotate.html) the plot above so we know which plane corresponds to each peak?\n",
-    "* Does the same code structure work for a different crystal structure, such as body-centered cubic or diamond cubic?\n",
-    "* How does **temperature** affect our sample and the resulting XRD spectra? How might you incorporate these effects into the code?\n",
-    "* [Hard] If you haven't done so already, can you write `compute_F()` in one return line? Hint: matrix multiplication and [`np.sum()`](https://numpy.org/doc/stable/reference/generated/numpy.sum.html). What about the other functions?\n",
+    "There are *so* many ways you can improve this notebook. Here are just a few ideas:\n",
+    "* [Easy] Does the same code structure work for a different crystal structure, such as body-centered cubic or diamond cubic? I've provided some data above for you to use.\n",
+    "* [Medium] How does **temperature** affect our sample and the resulting XRD spectra? How might you incorporate these effects into the code?\n",
+    "* [Medium] Can you [annotate](https://matplotlib.org/3.2.1/api/_as_gen/matplotlib.axes.Axes.annotate.html) the plot so we know which plane corresponds to each peak? This is good practice with [list comprehension](https://www.pythonforbeginners.com/basics/list-comprehensions-in-python) and the snazzy [f-strings](https://docs.python.org/3/reference/lexical_analysis.html#f-strings) syntax.\n",
+    "* [Hard] If you haven't done so already, can you write `compute_F()` in a single return line? Hint: Clever use of matrix multiplication and [`np.sum()`](https://numpy.org/doc/stable/reference/generated/numpy.sum.html). What about the other functions?\n",
     "* [Hard] Instead of a stem plot, what if you modeled the peaks with [Gaussians](https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.norm.html)? The really cool part of having a width is the ability to incorporate **thickness effects** through the [Scherrer equation](https://en.wikipedia.org/wiki/Scherrer_equation).\n",
     "\n",
     "I've implemented a few of the above ideas in [this other demo](https://colab.research.google.com/github/enze-chen/learning_modules/blob/master/mse/XRD_trends.ipynb). You can also reference that notebook if you get stuck on any of the above parts.\n",
     "\n",
-    "Also if you want to see the calculated spectra for more structures and compounds, you can find them on [The Materials Project](https://materialsproject.org/).\n",
-    "\n",
+    "Also if you want to see the calculated spectra for more structures and compounds, you can find them on [The Materials Project](https://materialsproject.org/)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----------------------\n",
     "\n",
     "## Conclusion\n",
-    "I hope you found this notebook helpful in reinforcing your knowledge of XRD and teaching you how to translate those concepts into code for visualization.\n",
+    "I hope you found this notebook helpful in reinforcing your knowledge of XRD and teaching you how to translate those concepts into code for visualization. \n",
+    "Please don't hesitate to reach out if you have any questions or ideas to contribute.\n",
     "\n",
     "\n",
     "## Acknowledgements\n",
     "\n",
-    "I thank Laura Armstrong for helpful discussions. I also thank [Prof. Andrew Minor](https://mse.berkeley.edu/people_new/minor/) for teaching MATSCI 204: Materials Characterization and my advisor [Prof. Mark Asta](https://mse.berkeley.edu/people_new/asta/) for his unwavering encouragement for my education-related pursuits. \n",
+    "I thank Laura Armstrong for helpful discussions. \n",
+    "I also thank [Prof. Andrew Minor](https://mse.berkeley.edu/people_new/minor/) for teaching MATSCI 204: Materials Characterization and my advisor [Prof. Mark Asta](https://mse.berkeley.edu/people_new/asta/) for his unwavering encouragement for my education-related pursuits. \n",
     "This project is generously hosted on [GitHub](https://github.com/enze-chen/learning_modules) and [Google Colaboratory](https://colab.research.google.com/github/enze-chen/learning_modules/blob/master/mse/XRD_trends.ipynb)."
    ]
   }
