--- a/mse/XRD_trends.ipynb
+++ b/mse/XRD_trends.ipynb
@@ -46,11 +46,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## How to run this notebook\n",
+    "## How to use this notebook\n",
     "\n",
     "If you are viewing this notebook on [Google Colaboratory](https://colab.research.google.com/github/enze-chen/learning_modules/blob/master/mse/XRD_trends.ipynb), then everything is already set up for you (hooray). If you want to run the notebook locally, make sure all the Python libraries in the [`requirements.txt`](https://github.com/enze-chen/learning_modules/blob/master/requirements.txt) file are installed.\n",
     "\n",
-    "To run this notebook, run all the cells (e.g. `Runtime > Run all` in the menu) and then adjust the sliders at the bottom. Click `Generate Plot` each time you change a setting. I recommend just running the code and experimenting with the inputs *before* reading the code in great detail."
+    "To run this notebook, run all the cells (e.g. `Runtime > Run all` in the menu) and then adjust the sliders at the bottom. Click `Generate Plot` each time you change a setting. I **strongly recommend** just running the code and experimenting with the inputs *before* reading the code in great detail."
    ]
   },
   {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "code_folding": []
    },
@@ -201,8 +201,7 @@
     "                   np.multiply(np.sin(theta)**2, np.cos(theta)))\n",
     "\n",
     "    # Final intensity\n",
-    "    factors = [np.absolute(F)**2, mult, Lp]\n",
-    "    I = np.prod(np.vstack(factors), axis=0)\n",
+    "    I = np.multiply(np.absolute(F)**2, np.multiply(mult, Lp))\n",
     "    \n",
     "    # Plotting\n",
     "    plt.rcParams.update({'figure.figsize':(10,5), 'font.size':22, 'axes.linewidth':2})\n",
@@ -248,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,11 +283,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0350aac27fb740a89faa798fa4719e7d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(FloatSlider(value=0.352, description='Lattice constant (nm)', layout=Layout(height='30px…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "interact_manual.opts['manual_name'] = 'Generate plot'\n",
     "interact_manual(plot_XRD, a=a_widget, wavelength=w_widget, cell_type=c_widget, \n",
@@ -304,18 +318,27 @@
     "## Discussion questions\n",
     "\n",
     "* Can you rationalize all the trends you see? \n",
-    "* Describe all the ways temperature affects the XRD spectra.\n",
-    "* How do we account for strain in our model? What differences might we observe between isotropic and anisotropic strain?\n",
-    "* If you're interested in scientific computing, try to understand how the Structure factor ($F$) is calculated with clever [NumPy](https://numpy.org/) tools.\n",
-    "\n",
+    "* Describe all the ways **temperature** affects the XRD spectra.\n",
+    "* How do we account for **strain** in our model? What differences might we observe between isotropic and anisotropic strain?\n",
+    "* If you're interested in scientific computing, try to understand how the Structure factor ($F$) is calculated with clever [NumPy](https://numpy.org/) tools."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--------------------------------------\n",
     "\n",
     "## Conclusion\n",
-    "I hope you found this notebook helpful in learning more about XRD and what affects a powder XRD spectra. Please don't hesitate to reach out if you have any questions or ideas to contribute.\n",
+    "I hope you found this notebook helpful in learning more about XRD and what affects a powder XRD spectra. \n",
+    "Please don't hesitate to reach out if you have any questions or ideas to contribute.\n",
     "\n",
     "## Acknowledgements\n",
     "\n",
-    "I thank Nathan Bieberdorf, Han-Ming Hau, Laura Armstrong, and Divya Ramakrishnan for user testing and helpful suggestions. I also thank [Prof. Andrew Minor](https://mse.berkeley.edu/people_new/minor/) for teaching MATSCI 204: Materials Characterization and my advisor [Prof. Mark Asta](https://mse.berkeley.edu/people_new/asta/) for his unwavering encouragement for my education-related pursuits. \n",
-    "Interactivity is enabled with the [`ipywidgets`](https://ipywidgets.readthedocs.io/en/stable/) library and generous hosting from [Google Colaboratory](https://colab.research.google.com/github/enze-chen/learning_modules/blob/master/mse/XRD_trends.ipynb) and [nanoHUB](https://nanohub.org/tools/xrdinteract/)."
+    "I thank Laura Armstrong, Nathan Bieberdorf, Han-Ming Hau, and Divya Ramakrishnan for user testing and helpful suggestions. \n",
+    "I also thank [Prof. Andrew Minor](https://mse.berkeley.edu/people_new/minor/) for teaching MATSCI 204: Materials Characterization and my advisor [Prof. Mark Asta](https://mse.berkeley.edu/people_new/asta/) for his unwavering encouragement for my education-related pursuits. \n",
+    "Interactivity is enabled with the [`ipywidgets`](https://ipywidgets.readthedocs.io/en/stable/) library. \n",
+    "This project is generously hosted on [GitHub](https://github.com/enze-chen/learning_modules), [Google Colaboratory](https://colab.research.google.com/github/enze-chen/learning_modules/blob/master/mse/XRD_trends.ipynb), and [nanoHUB](https://nanohub.org/tools/xrdinteract/) (older version)."
    ]
   },
   {
