tidied up indexing

--- a/mse/XRD_indexing.ipynb
+++ b/mse/XRD_indexing.ipynb
@@ -477,11 +477,7 @@
     "\n",
     "Technically, the output of a powder XRD experiment is an entire spectra, not a set of angles for where the peaks are. \n",
     "It's stored as a column of $2\\theta$ values followed by a column of $\\text{Intensity}$ values. \n",
-    "How might code help you extract the positions of the peaks?\n",
-    "\n",
-    "## Answers\n",
-    "\n",
-    "If you found yourself stuck at certain points, I provide some sample answers [here](https://github.com/enze-chen/learning_modules/blob/master/data/answers.md#XRD_indexing)."
+    "How might code help you extract the positions of the peaks?"
    ]
   },
   {
@@ -499,7 +495,7 @@
     "\n",
     "## Acknowledgements\n",
     "\n",
-    "I thank my Stanford undergraduate instructors [Prof. Renee Sher](https://www.wesleyan.edu/academics/faculty/msher/profile.html) and [Dr. Arturas Vailionis](https://profiles.stanford.edu/arturas-vailionis) for teaching me XRD. \n",
+    "I thank Han-Ming Hau for helpful discussions and my Stanford undergraduate instructors [Prof. Renee Sher](https://www.wesleyan.edu/academics/faculty/msher/profile.html) and [Dr. Arturas Vailionis](https://profiles.stanford.edu/arturas-vailionis) for teaching me XRD. \n",
     "I also thank my advisor [Prof. Mark Asta](https://mse.berkeley.edu/people_new/asta/) for his unwavering encouragement for my education-related pursuits. \n",
     "This interactive project is generously hosted on [GitHub](https://github.com/enze-chen/learning_modules) and [Google Colaboratory](https://colab.research.google.com/github/enze-chen/learning_modules/blob/master/mse/XRD_indexing.ipynb)."
    ]
