--- a/mse/XRD_plotting.ipynb
+++ b/mse/XRD_plotting.ipynb
@@ -79,9 +79,7 @@
     "# Scientific computing libraries\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline\n",
-    "plt.rcParams.update({'figure.figsize':(8,6), 'font.size':20, 'axes.linewidth':2,\n",
-    "                     'lines.linewidth':4, 'lines.markersize':10})"
+    "%matplotlib inline"
    ]
   },
   {
@@ -193,7 +191,7 @@
     "\n",
     "**TODO**: Complete the following function named `compute_F()`. Some hints are:    \n",
     "- The formula for the structure factor is given by (Ch. 12 of [Structure of Materials](https://www.cambridge.org/core/books/structure-of-materials/22A17D7856B8472E7B73B38F1147C0FD) by De Graef and McHenry):\n",
-    "$$ F_{hkl} = \\sum_{j=1}^{N} f_j (s) \\cdot \\exp \\left( 2 \\pi i \\left( hu_j + kv_j + lw_j \\right) \\right), \\quad s = \\frac{\\sin \\left( \\theta_{hkl} \\right)}{\\lambda} $$\n",
+    "$$ F_{hkl} = \\sum_{j=1}^{N} f (s) \\cdot \\exp \\left( 2 \\pi i \\left( hu_j + kv_j + lw_j \\right) \\right), \\quad s = \\frac{\\sin \\left( \\theta_{hkl} \\right)}{\\lambda} $$\n",
     "\n",
     "- While we're not typically taught the functional form of the atomic scattering factor $f_j$, De Graef provides it for us as: \n",
     "$$ f(s) = Z - 41.78214 \\times s^2 \\times \\sum_{i=1}^{N} a_i \\exp \\left( -b_i s^2 \\right) $$\n",
@@ -208,7 +206,9 @@
     "We'll make this one of the inputs to the function below and give the atomic scattering factor elsewhere.\n",
     "\n",
     "- I strongly recommend starting off with `for` loops to handle the multiplication and use intermediate variables to store the temporary values.\n",
-    "- If the dimensions are confusing, $f$ and $F$ have the same dimensions. Use this fact to guide you."
+    "- If the dimensions are confusing, $f$ and $F$ have the same dimensions. Use this fact to guide you.\n",
+    "- Matrix multiplication is performed with the `@` operator and matrix `arr` can be transposed as `arr.T`.\n",
+    "- The imaginary unit in Python is expressed as `1j`."
    ]
   },
   {
@@ -249,7 +249,7 @@
    "source": [
     "#### Test for `compute_F()`\n",
     "\n",
-    "Again, we'll write a little test for this rather complex function. It's good practice and a good sanity check. Assuming you use my default values for Ni, you should get approximately: `[0, 0, 82.1, 76.8]` corresponding to [FCC selection rules](https://raw.githubusercontent.com/enze-chen/learning_modules/master/fig/XRD_selection_rules.png)."
+    "Again, we'll write a little test for this rather complex function. It's good practice and a good sanity check. Assuming you use my default values for Ni, you should get approximately: `[0, 0, 82.1, 76.8]` corresponding to [FCC selection rules](https://raw.githubusercontent.com/enze-chen/learning_modules/master/fig/XRD_selection_rules.png) for the (100), (110), (111), and (200) planes, respectively."
    ]
   },
   {
@@ -279,8 +279,9 @@
     "**TODO**: Complete the following function named `compute_m()`. There are many ways to accomplish this. Some hints for what I think is a logical way are:\n",
     "- Can you separate the computation for number of permutations and the number of different sign combinations?\n",
     "- You might find the `set()` function combined with [`itertools.permutations()`](https://www.geeksforgeeks.org/python-itertools-permutations/) useful.\n",
-    "- You might find the [`np.count_nonzero(x)`](https://numpy.org/doc/stable/reference/generated/numpy.count_nonzero.html) function helpful for computing the contribution from sign flips.\n",
-    "- You can raise a scalar to an exponent that's a NumPy array with the `scalar**array` syntax."
+    "- You might find the [`np.count_nonzero(x)`](https://numpy.org/doc/stable/reference/generated/numpy.count_nonzero.html) function helpful for computing the contribution from sign flips. Note the `axis` parameter.\n",
+    "- You can raise a scalar to an exponent that's a NumPy array with the `scalar**array` syntax.\n",
+    "- A [list comprehension](https://www.pythonforbeginners.com/basics/list-comprehensions-in-python) may be helpful here. A `for` loop is fine too."
    ]
   },
   {
@@ -418,6 +419,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "basis = np.array([[0,0,0], [0.5,0.5,0], [0.5,0,0.5], [0,0.5,0.5]])\n",
     "planes = np.array([[1,0,0], [1,1,0], [1,1,1], [2,0,0], [2,1,0], \n",
     "                   [2,1,1], [2,2,0], [2,2,1], [3,0,0], [3,1,0], \n",
     "                   [3,1,1], [2,2,2], [3,2,0], [3,2,1], [4,0,0]])\n",
@@ -433,6 +435,8 @@
     "\n",
     "# ---------------------- #\n",
     "\n",
+    "plt.rcParams.update({'figure.figsize':(8,6), 'font.size':20, 'axes.linewidth':2,\n",
+    "                     'lines.linewidth':4, 'lines.markersize':10})\n",
     "fig, ax = plt.subplots()\n",
     "ax.stem(angles, intensities, basefmt='k--', use_line_collection=True)\n",
     "ax.set_xlabel(r'$2\\theta$ (degree)')\n",
@@ -461,7 +465,7 @@
     "\n",
     "I've implemented a few of the above ideas in [this other demo](https://colab.research.google.com/github/enze-chen/learning_modules/blob/master/mse/XRD_trends.ipynb). You can also reference that notebook if you get stuck on any of the above parts.\n",
     "\n",
-    "Also if you want to see the calculated spectra for more structures and compounds, you can find them on [The Materials Project](https://materialsproject.org/)."
+    "Also if you want to see more precise calculated spectra for even more materials, you can find them on [The Materials Project](https://materialsproject.org/)."
    ]
   },
   {
